<resources>
    <string name="app_name">Login App</string>
    <string name="login_email">Email Address <font fgcolor='#FF0000'>*</font></string>
    <string name="login_password">Password <font fgcolor='#FF0000'>*</font></string>
    <string name="login_btn">login</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="cancel">Cancel</string>
</resources>