<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black_text_color"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icon_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_grey_background"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icon_lock_24"
            style="@style/Widget.Shrine.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:paddingEnd="50dp"
                android:id="@+id/login_password_edittext"
                android:background="@drawable/edittext_grey_background"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/login_btn_blue_background"
                android:text="@string/cancel"
                android:textColor="@color/white_text_color"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_weight="1"
                android:layout_width="158dp"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/login_btn_blue_background"
                android:text="@string/login_btn"
                android:textColor="@color/white_text_color"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
